# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lymt.yml
brain_games/: brain_games_engine.py  cli.py
brain_games/scripts/: brain_games.py  brain_games_engine.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
